src/objects/workday_beneficiaries__x.object
<CustomObject>
    <description>workday.beneficiaries</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.beneficiaries</externalName>
    <fields>
        <fullName>beneficiary_name__c</fullName>
        <description>beneficiary_name</description>
        <externalDeveloperName>beneficiary_name</externalDeveloperName>
        <label>beneficiary_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>beneficiary_relationship__c</fullName>
        <description>beneficiary_relationship</description>
        <externalDeveloperName>beneficiary_relationship</externalDeveloperName>
        <label>beneficiary_relationship</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>benefit_elections__c</fullName>
        <description>benefit_elections</description>
        <externalDeveloperName>benefit_elections</externalDeveloperName>
        <label>benefit_elections</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <description>percent</description>
        <externalDeveloperName>percent</externalDeveloperName>
        <label>percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>workday.beneficiaries</label>
    <pluralLabel>workday.beneficiaries</pluralLabel>
</CustomObject>